package TuEvento.Backend.dto.responses;

import lombok.NoArgsConstructor;
import lombok.AllArgsConstructor;
import lombok.Data;


@AllArgsConstructor
@NoArgsConstructor
@Data
public class ResponseEvent {
    private String eventNameOld;
}
