@startuml Simple DTO Class Diagram

class AccountActivationDto {
}

class AddressDto {
}

class CategoryDto {
}

class CategoryEventDto {
}

class CityDto {
}

class DepartmentDto {
}

class EventDto {
}

class EventLayoutDto {
}

class EventRatingDto {
}

class LocationDto {
}

class LoginDto {
}

class NotificationDto {
}

class NotificationUserDto {
}

class OrganizerPetitionDto {
}

class RecoverPasswordDto {
}

class RegisterRequestDto {
}

class SeatDto {
}

class SectionDto {
}

class SectionNameDto {
}

class TicketDto {
}

class UserDto {
}

class UserSocial {
}

class EventImgRequestDto {
}

class EventImgResponseDto {
}

class ActivationCodeEmailDto {
}

class ChangePasswordDto {
}

class ForgotPasswordDto {
}

class RequestLoginDTO {
}

class ResetPasswordDTO {
}

class TokenInfo {
}

class ResponseDto<T> {
}

class ResponseEvent {
}

class ResponseEventSearch {
}

class ResponseLogin {
}

' Relationships
EventDto --> User : userID
EventDto --> Location : locationID
EventLayoutDto --> Event : eventID
RecoverPasswordDto --> User : userID
RequestLoginDTO --> User : userID

@enduml